Bug fix: set overflow: hidden for my divs. The spans inside were overflowing and causing issues on which item was being clicked

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 .container-board > div > span {
@@ -85,4 +86,8 @@ button {
     grid-column: 1 / 3;
     font-size: 20px;
     font-weight: bold;
+}
+
+.clicked {
+    background-color: lightblue;
 }
